Fix section background image not showing

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -14,7 +14,7 @@
 
 /* <-------  ONE STEP AWAY SECTIONS  -------> */
 .cta.bg-accent {
-    background-image: url(../../../public/assets/cta-bg-1.jpg);
+    background-image: url('../../../assets/cta-bg-1.jpg');
     background-blend-mode: multiply;
 }
 
@@ -36,5 +36,5 @@
 
 /* <-------  STEP UP SECTIONS  -------> */
 .cta.bg-light {
-    background-image: url(../../../public/assets/cta-bg-2.jpg);
+    background-image: url('../../../assets/cta-bg-2.jpg');
 }
